Update Deployment Changes

--- a/Backend/ChatAPI.ipynb
+++ b/Backend/ChatAPI.ipynb
@@ -34,6 +34,7 @@
     "GROQ_API_KEY = os.getenv(\"GROQ_API_KEY\")\n",
     "GEMINI_BASE = \"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
     "GROQ_BASE = \"https://api.groq.com/openai/v1\"\n",
+    "frontend_url = \"https://ramyak457.github.io/Portfolio/\"\n",
     "\n",
     "gemini = OpenAI(api_key=GOOGLE_API_KEY, base_url=GEMINI_BASE)\n",
     "groq = OpenAI(api_key=GROQ_API_KEY, base_url=GROQ_BASE)\n",
@@ -43,7 +44,7 @@
     "# CORS so your frontend (localhost:5173) can call the notebook server\n",
     "app.add_middleware(\n",
     "    CORSMiddleware,\n",
-    "    allow_origins=[\"http://localhost:5174\"],   \n",
+    "    allow_origins=[frontend_url],   \n",
     "    allow_credentials=True,\n",
     "    allow_methods=[\"*\"],\n",
     "    allow_headers=[\"*\"],\n",
